--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -2,7 +2,7 @@
     <%- include('../partials/messages.ejs') %>
     
     <h1>Sar<span class="text-success">ok</span>aar</h1>
-    <form action="/admin" method="POST">
+    <form action="/admin/dashboard" method="POST">
         <div class="form-group">
             <i class="fas fa-user-tie"></i>
             <input type="text" 
