--- a/views/layouts/users.ejs
+++ b/views/layouts/users.ejs
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/userLayout.css">
   <script defer src="/js/showModal.js"></script>
+  <script defer src="/js/showHistory.js"></script>
   <style>
     body {
       overflow-x: hidden;
