--- a/views/partials/d-sidebar.ejs
+++ b/views/partials/d-sidebar.ejs
@@ -25,8 +25,8 @@
     </li>
     <li class="list-group-item" style="font-size:20px">
       <i class="far fa-registered"></i>
-      <form action="/admin/dashboard/register" method="GET">
-        <input type="submit" value="register" class="d-sidenav-item">
+      <form action="/admin/dashboard/invite" method="GET">
+        <input type="submit" value="invite" class="d-sidenav-item">
       </form>
     </li>
     <li class="list-group-item" style="font-size:20px"> 
