--- a/views/partials/user-header.ejs
+++ b/views/partials/user-header.ejs
@@ -12,14 +12,17 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
+      </ul>
+
+      
+      <ul class="navbar-nav my-2 my-lg-0"> 
+        <li class="nav-item d-flex align-items-center">
+          <a class="nav-link" href="/user/profile"><%= user.uname %></a>
+        </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><%= user.uname %></a>
+          <img src="<%= user.image %>" class="ml-3" style="height:60px;width:60px;border-radius:50%;border:1px solid black"/>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
     </div>
   </nav>
 </header>
