--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -49,6 +49,21 @@
                     value="<%= typeof mobile != 'undefined' ? mobile : '' %>"
                     class="transparent">
                 </div>
+
+                <div class="form-group bx text-dark d-flex justify-content-start">
+
+                    <div class="custom-control custom-radio custom-control-inline">
+                    <input type="radio" class="custom-control-input" id="defaultInline1" name="gender" value="male" checked>
+                    <label class="custom-control-label" for="defaultInline1">Male</label>
+                    </div>
+
+                    <div class="custom-control custom-radio custom-control-inline">
+                    <input type="radio" class="custom-control-input" id="defaultInline2" name="gender" value="female">
+                    <label class="custom-control-label" for="defaultInline2">Female</label>
+                    </div>
+                    
+                </div>
+
                 <div class="form-group bx">
                     <i class="fas fa-key"></i>
                     <input type="password" 
