--- a/views/users/settings.ejs
+++ b/views/users/settings.ejs
@@ -1,5 +1,7 @@
+<%- include("../partials/messages.ejs") %>
+
 <div class="d-flex justify-content-center align-items-center mt-5">
-    <form action="/user/settings" method="POST" class="text-left">
+    <form action="/user/settings" method="POST" class="text-left" enctype="multipart/form-data">
         <table>
             <tr>
                 <td>Username</td>
@@ -18,6 +20,12 @@
                 <td><input type="password" class="form-control" required name="password" placeholder="new password"></td>
             </tr>
         </table>
+        <input type="hidden" name="image" value="<%= user.image %>"/>
+
+        <div class="form-group">
+          <input type="file" name="pic">
+        </div>
+
         <div class="btns mt-3">
             <button type="submit" class="btn btn-info">change</button>
             <button type="button" class="btn btn-info">reset</button>
