--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,3 +1,5 @@
+<%- include("../partials/messages.ejs") %>
+
 <% if (typeof users !== 'undefined') { %>
   <%- include('../partials/getAllUsers',{users:users}); %>
 <% } %>
