--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -53,7 +53,7 @@
                 <div class="form-group bx text-dark d-flex justify-content-start">
 
                     <div class="custom-control custom-radio custom-control-inline">
-                    <input type="radio" class="custom-control-input" id="defaultInline1" name="gender" value="male" checked>
+                    <input type="radio" class="custom-control-input" id="defaultInline1" name="gender" value="male">
                     <label class="custom-control-label" for="defaultInline1">Male</label>
                     </div>
 
