--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -2,7 +2,7 @@
   <% Zposts.forEach(post => { %>
     <div class="card card-body mb-3 rpost">
       <div class="container">
-        <h5><%= post.title %></h5>
+        <h5 class="pb-2" style="border-bottom: 3px solid #deefde"><%= post.title %></h5>
         <div class="badge badge-success mb-4"><img src="<%= post.url %>" style="width:100%;"/></div>
       </div>
     </div>
