--- a/views/layouts/users.ejs
+++ b/views/layouts/users.ejs
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="/css/userLayout.css">
   <script defer src="/js/showModal.js"></script>
   <script defer src="/js/showHistory.js"></script>
+  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.js'></script>
+  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.css' rel='stylesheet' />
   <style>
     body {
       overflow-x: hidden;
@@ -18,21 +20,19 @@
   </style>
 </head>
 <body>
-  <header class="sticky-top">
+  <header class="sticky-top" style="box-shadow:0 0 5px 0px rgba(0,0,0,0.7)">
     <%- include('../partials/user-header.ejs')%>  
   </header>
   <main>
-    <div class="row">
-      <div class="col-md-2 bg-info flex col-lg-2">
+    <div class="row" style="min-height:100vh;">
+      <div class="col-sm-2 bg-success">
         <%- include('../partials/user-sidebar.ejs')%>
       </div>
-      <div class="col-md-12 col-sm-12 col-lg-8">
-        <div class="container pt-3">
+      <div class="col-sm-10">
+        <div class="container pt-3 px-5">
           <%- include('../partials/messages.ejs') %>
           <%- body %>
         </div>
-      </div>
-      <div class="min-vh-100 bg-info hide col-lg-2">
       </div>
     </div>
   </main>
