--- a/views/partials/googlemapapi.ejs
+++ b/views/partials/googlemapapi.ejs
@@ -10,4 +10,4 @@
   }
 </script>
 <script defer async src="/js/googleapi.js"></script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_v3-uFrJWvGaafcCyVtRfYfo7d6k4pPg&callback=initMap"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= key %>&callback=initMap"></script>
