--- a/views/users/complain-form.ejs
+++ b/views/users/complain-form.ejs
@@ -30,7 +30,8 @@
                 </li>
             <ul>
           </div>
-          <%- include("../partials/googlemapapi.ejs") %>
+          
+          <%- include("../partials/googlemapapi.ejs",{key: googeMapAPI}) %>
       </div>
       <div class="form-group">
           <label>Please briefly describe the problem:</label>
@@ -38,15 +39,15 @@
       </div>
       <div class="form-group">
         <div class="file-field">
-    <div class="z-depth-1-half mb-4">
-      <img src="https://mdbootstrap.com/img/Photos/Others/placeholder.jpg" style="height:20vh;" alt="example placeholder">
-    </div>
-    <div class="d-flex justify-content-center">
-      <div class="btn btn-mdb-color btn-rounded float-left">
-        <span>Choose file</span>
-        <input type="file">
+          <div class="z-depth-1-half mb-4">
+            <img src="https://mdbootstrap.com/img/Photos/Others/placeholder.jpg" style="height:20vh;" alt="example placeholder">
+          </div>
+        <div class="d-flex justify-content-center">
+        <div class="btn btn-mdb-color btn-rounded float-left">
+          <span>Choose file</span>
+          <input type="file">
+        </div>
       </div>
-    </div>
   </div>
       </div>
       <input type="submit" value="submit" class="btn btn-success w-25 text-center" />
