--- a/resources/css/userLayout.css
+++ b/resources/css/userLayout.css
@@ -69,6 +69,47 @@ html {
   max-width: 100% !important;
 }
 
+.dropbtn {
+  background: transparent;
+  color: black;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  outline: none !important;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  background: transparent !important;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {
+  background-color: #ddd;
+}
+
+.show {
+  display: block;
+}
+
 .jumboss::first-letter {
   font-size: 70px;
   vertical-align: top;
