--- a/views/layouts/users.ejs
+++ b/views/layouts/users.ejs
@@ -1,41 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Sarokaar</title>
-  <link rel="shortcut icon" href="/images/slogo-2.png" type="image/x-icon">
-  <link rel="stylesheet" href="/fonts/css/all.min.css">
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/userLayout.css">
-  <script defer src="/js/showModal.js"></script>
-  <script defer src="/js/showHistory.js"></script>
-  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.js'></script>
-  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.css' rel='stylesheet' />
-  <style>
-    body {
-      overflow-x: hidden;
-    }
-  </style>
-</head>
-<body>
-  <header class="sticky-top" style="box-shadow:0 0 5px 0px rgba(0,0,0,0.7)">
-    <%- include('../partials/user-header.ejs')%>  
-  </header>
-  <main>
-    <div class="row" style="min-height:100vh;">
-      <div class="col-sm-2 bg-success">
-        <%- include('../partials/user-sidebar.ejs')%>
-      </div>
-      <div class="col-sm-10">
-        <div class="container pt-3 px-5">
-          <%- include('../partials/messages.ejs') %>
-          <%- body %>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Sarokaar</title>
+    <link rel="shortcut icon" href="/images/slogo-2.png" type="image/x-icon" />
+    <link rel="stylesheet" href="/fonts/css/all.min.css" />
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/userLayout.css" />
+    <script defer src="/js/showModal.js"></script>
+    <script defer src="/js/showHistory.js"></script>
+    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.js"></script>
+    <link
+      href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.css"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        overflow-x: hidden;
+      }
+    </style>
+  </head>
+  <body>
+    <header class="sticky-top" style="box-shadow:0 0 5px 0px rgba(0,0,0,0.7)">
+      <%- include('../partials/user-header.ejs')%>
+    </header>
+    <main>
+      <div class="row" style="min-height:100vh;">
+        <div class="col-sm-0 col-md-1 bg-success"></div>
+        <div class="col-sm-12 col-md-10">
+          <div class="container p-5">
+            <%- include('../partials/messages.ejs') %> <%- body %>
+          </div>
         </div>
+        <div class="col-sm-0 col-md-1 bg-success"></div>
       </div>
-    </div>
-  </main>
-  <%- include('../partials/footer.ejs') %>
-</body>
+    </main>
+    <%- include('../partials/footer.ejs') %>
+  </body>
 </html>
