--- a/views/users/complain-form.ejs
+++ b/views/users/complain-form.ejs
@@ -1,59 +1,65 @@
 <div class=" container pt-3">
-  <% if(typeof msg != 'undefined') { %>
-  <div class="alert alert-danger"><%= msg %></div>
-  <% } %>
   <form class="form-horizotal d-flex justify-content-center align-items-items flex-column"
-      action="/user/upload" method="POST" enctype="multipart/form-data">
-      <div class="form-group">
-          <label>state the title</label>
-          <input class="form-control" type="text" name="title" placeholder="title" />
-      </div>
-      <div class="form-group">
-          <label>Enter the appropriate location:</label>
-          <input class="form-control" type="text" name="location" placeholder="location" />
-      </div>
-      <div class="form-group">
-          <div class="d-flex justify-content-between align-items-center mb-2">
-            <div><label>Map:</label></div>
-            <ul class="list-group list-group-horizontal">
-                <li class="pill pill-info list-group-item text-center">longitude:
-                    <div id="latclicked">0</div>
-                </li>
-                <li class="pill pill-info list-group-item text-center">latitude:
-                    <div id="longclicked">0</div>
-                </li>
-                <li class="pill pill-info list-group-item text-center">latmoved:
-                    <div id="latmoved">0</div>
-                </li>
-                <li class="pill pill-info list-group-item text-center">longmoved:
-                    <div id="longmoved">0</div>
-                </li>
-            <ul>
-          </div>
-          
-          <%- include("../partials/googlemapapi.ejs",{key: googeMapAPI}) %>
-      </div>
-      <div class="form-group">
-          <label>Please briefly describe the problem:</label>
-          <textarea class="form-control" name="description" cols="" rows="10"></textarea>
-      </div>
-      <div class="form-group">
-        <div class="file-field">
-          <div class="z-depth-1-half mb-4">
-            <img src="https://mdbootstrap.com/img/Photos/Others/placeholder.jpg" style="height:20vh;" alt="example placeholder">
-          </div>
+    action="/user/upload" method="POST" enctype="multipart/form-data">
+    <div class="form-group">
+        <label>state the title</label>
+        <input class="form-control" type="text" name="title" placeholder="title" />
+    </div>
+    <div class="form-group">
+        <label>Enter the appropriate location:</label>
+        <input class="form-control" type="text" name="location" placeholder="location" />
+    </div>
+    <div class="form-group">
+        <div class="d-flex justify-content-between align-items-center mb-2">
+          <div><label>Map:</label></div>
+          <ul class="list-group list-group-horizontal">
+              <li class="pill pill-info list-group-item text-center">longitude:
+                  <div id="latclicked" name="latclicked">0</div>
+              </li>
+              <li class="pill pill-info list-group-item text-center">latitude:
+                  <div id="longclicked" name="longclicked">0</div>
+              </li>
+              <li class="pill pill-info list-group-item text-center">latmoved:
+                  <div id="latmoved">0</div>
+              </li>
+              <li class="pill pill-info list-group-item text-center">longmoved:
+                  <div id="longmoved">0</div>
+              </li>
+          <ul>
+        </div>
+        
+        <%- include("../partials/googlemapapi.ejs",{key: googeMapAPI}) %>
+    </div>
+    <div class="form-group">
+        <label>Please briefly describe the problem:</label>
+        <textarea class="form-control" name="description" cols="" rows="10"></textarea>
+    </div>
+
+
+    <div class="file-field">
+        <div class="z-depth-1-half mb-4">
+          <% if(typeof file != 'undefined') { %>
+          <img src="<%= file %>" style="height:20vh;">
+          <% }else { %>
+          <img src="https://mdbootstrap.com/img/Photos/Others/placeholder.jpg" style="height:20vh;">
+          <% } %>
+        </div>
         <div class="d-flex justify-content-center">
-        <div class="btn btn-mdb-color btn-rounded float-left">
-          <span>Choose file</span>
-          <input type="file">
+          <div class="btn btn-mdb-color btn-rounded float-left">
+            <div class="btn btn-info" id="trigger">Upload a Photo</div>
+            <input type="file" name="myImage" id="real-file" hidden>
+          </div>
         </div>
       </div>
-  </div>
-      </div>
-      <input type="submit" value="submit" class="btn btn-success w-25 text-center" />
+
+    <input type="submit" value="submit" class="btn btn-success w-25 text-center" />
   </form>
-  </div>
-  <% if(typeof file != 'undefined') { %>
-  <% } %>
-  <br>
 </div>
+
+<script defer>
+    var trigger = document.getElementById('trigger');
+    var myImage = document.getElementById('real-file');
+    trigger.addEventListener('click',() => {
+        myImage.click();
+    })
+</script>
