--- a/views/users/settings.ejs
+++ b/views/users/settings.ejs
@@ -1,34 +1,56 @@
-<%- include("../partials/messages.ejs") %>
-
 <div class="d-flex justify-content-center align-items-center mt-5">
     <form action="/user/settings" method="POST" class="text-left" enctype="multipart/form-data">
         <table>
             <tr>
                 <td>Username</td>
-                <td><input type="text" placeholder="username" class="form-control" required name="uname" value="<%= user.uname %>"></td>
+                <td><input type="text" placeholder="username" class="form-control" name="uname" value="<%= user.uname %>"></td>
             </tr>
             <tr>
                 <td>Email</td>
-                <td><input type="email" placeholder="email" class="form-control" required name="email" value="<%= user.email %>"></td>
+                <td><input type="email" placeholder="email" class="form-control" name="email" value="<%= user.email %>"></td>
             </tr>
             <tr>
                 <td>mobile no.</td>
-                <td><input type="text" placeholder="mobile" class="form-control" required name= "mobile" value="<%= user.mobile %>"></td>
+                <td><input type="text" placeholder="mobile" class="form-control" name= "mobile" value="<%= user.mobile %>"></td>
             </tr>
             <tr>
                 <td>password</td>
-                <td><input type="password" class="form-control" required name="password" placeholder="new password"></td>
+                <td><input type="password" class="form-control" name="password" placeholder="new password"></td>
+            </tr>
+            <tr>
+                <td>confirm password</td>
+                <td><input type="password" class="form-control" name="cpassword" placeholder="confirm new password"></td>
             </tr>
         </table>
         <input type="hidden" name="image" value="<%= user.image %>"/>
 
-        <div class="form-group">
-          <input type="file" name="pic">
+
+        <div class="file-field">
+            <div class="z-depth-1-half mb-4">
+                <% if(typeof file != 'undefined') { %>
+                <img src="<%= user.image %>" style="height:20vh;">
+                 <% }else { %>
+                <img src="https://mdbootstrap.com/img/Photos/Others/placeholder.jpg" style="height:20vh;">
+                <% } %>
+            </div>
+            <div class="d-flex justify-content-center">
+                <div class="btn btn-mdb-color btn-rounded float-left">
+                    <span class="btn btn-info" id="trigger">Choose New Photo</span>
+                    <input type="file" name="myImage" id="real-file" hidden>
+                </div>
+            </div>
         </div>
 
         <div class="btns mt-3">
             <button type="submit" class="btn btn-info">change</button>
-            <button type="button" class="btn btn-info">reset</button>
         </div>
     </form>
 </div>
+
+<script defer>
+    var trigger = document.getElementById('trigger');
+    var myImage = document.getElementById('real-file');
+    trigger.addEventListener('click',() => {
+        myImage.click();
+    })
+</script>
