--- a/views/partials/user-header.ejs
+++ b/views/partials/user-header.ejs
@@ -28,10 +28,10 @@
       </ul>
 
       <ul class="navbar-nav my-lg-0">
-        <li class="nav-item d-flex flex-column align-items-center">
+        <li class="nav-item d-flex align-items-center">
           <div class="dropdown">
             <button onclick="myFunction()" class="dropbtn">
-              click
+              more<span class="m-1"><i class="fas fa-angle-down"></i></span>
             </button>
             <div id="myDropdown" class="dropdown-content">
               <a href="/user/profile">profile</a>
