--- a/views/partials/getAllComplains.ejs
+++ b/views/partials/getAllComplains.ejs
@@ -1,3 +1,17 @@
+<nav class="navbar navbar-light bg-light float-right">
+  <form class="form-inline">
+    <input
+      class="form-control mr-sm-2"
+      type="search"
+      placeholder="Search"
+      aria-label="Search"
+    />
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+      <i class="fas fa-search"></i>
+    </button>
+  </form>
+</nav>
+
 <table class="table table-striped">
   <tr>
     <th>post id</th>
@@ -8,27 +22,34 @@
     <th>Marked by</th>
   </tr>
   <% complains.forEach(complain => { %>
-    <tr>
-      <td><a style="color:black;text-decoration:none;" href="/admin/dashboard/complaints/find/<%= complain.cid %>"><%= complain.cid %></a></td>
-      <td><%= complain.title %></td>
-      <td><%= complain.createdBy %></td>
-      <td><%= complain.dateCreated %></td>
-      <td>
-        <a href="/admin/dashboard/complaints/mark/<%= complain.cid %>">
-          <% if(complain.isCompleted) { %>
-            <div class="btn btn-success text-center" style="width: 110px;">
-              completed
-            </div>
-          <% }else { %>
-            <div class="btn btn-danger text-center" style="width: 110px;">
-              pending
-            </div>
-          <% } %>
-        </a>
-      </td>
-      <td>
-        <%= complain.markedBy %>
-      </td>
-    </tr>
+  <tr>
+    <td>
+      <a
+        style="color:black;text-decoration:none;"
+        href="/admin/dashboard/complaints/find/<%= complain.cid %>"
+        ><%= complain.cid %></a
+      >
+    </td>
+    <td><%= complain.title %></td>
+    <td><%= complain.createdBy %></td>
+    <td><%= complain.dateCreated %></td>
+    <td>
+      <a href="/admin/dashboard/complaints/mark/<%= complain.cid %>">
+        <% if(complain.isCompleted) { %>
+        <div class="btn btn-success text-center" style="width: 110px;">
+          completed
+        </div>
+        <% }else { %>
+        <div class="btn btn-danger text-center" style="width: 110px;">
+          pending
+        </div>
+        <% } %>
+      </a>
+    </td>
+    <td>
+      <%= complain.markedBy %>
+    </td>
+  </tr>
   <% }) %>
-<table>
+  <table></table>
+</table>
