--- a/views/partials/googlemapapi.ejs
+++ b/views/partials/googlemapapi.ejs
@@ -1,13 +1,76 @@
 <div id="map" style="height: 50vh;"></div>
-<script>
-  var map;
+<script defer>
   function initMap() {
-    map = new google.maps.Map(document.getElementById('map'), {
-      center: {lat: 27.7172453, lng: 85.3239605},
-      zoom: 19,
-      disableDoubleClickZoom: true
+    var map;
+    var latitude = 27.7172453; // YOUR LATITUDE VALUE
+    var longitude = 85.3239605; // YOUR LONGITUDE VALUE
+
+    var myLatLng = { lat: latitude, lng: longitude };
+
+    map = new google.maps.Map(document.getElementById("map"), {
+      center: myLatLng,
+      zoom: 14,
+      disableDoubleClickZoom: true // disable the default map zoom on double click
     });
+
+    // Update lat/long value of div when anywhere in the map is clicked
+    google.maps.event.addListener(map, "click", function(event) {
+      document.getElementById("latclicked").innerHTML = event.latLng.lat();
+      document.getElementById("longclicked").innerHTML = event.latLng.lng();
+    });
+
+    // Update lat/long value of div when you move the mouse over the map
+    google.maps.event.addListener(map, "mousemove", function(event) {
+      document.getElementById("latmoved").innerHTML = event.latLng.lat();
+      document.getElementById("longmoved").innerHTML = event.latLng.lng();
+    });
+
+    var marker;
+
+    marker = new google.maps.Marker({
+      position: myLatLng,
+      map: map,
+      title: latitude + ", " + longitude
+    });
+
+    let markerArr = [];
+    markerArr.push(marker);
+
+    // Update lat/long value of div when the marker is clicked
+    marker.addListener("click", function(event) {
+      document.getElementById("latclicked").innerHTML = event.latLng.lat();
+      document.getElementById("longclicked").innerHTML = event.latLng.lng();
+    });
+
+    // Create new marker on double click event on the map
+    google.maps.event.addListener(map, "dblclick", function(event) {
+      markerArr = [];
+      marker = new google.maps.Marker({
+        position: event.latLng,
+        map: map,
+        title: event.latLng.lat() + ", " + event.latLng.lng()
+      });
+
+      // Update lat/long value of div when the marker is clicked
+      marker.addListener("click", function() {
+        document.getElementById("latclicked").innerHTML = event.latLng.lat();
+        document.getElementById("longclicked").innerHTML = event.latLng.lng();
+      });
+      markerArr.push(marker);
+    });
+
+    // Create new marker on single click event on the map
+    /*google.maps.event.addListener(map,'click',function(event) {
+            var marker = new google.maps.Marker({
+              position: event.latLng,
+              map: map,
+              title: event.latLng.lat()+', '+event.latLng.lng()
+            });
+        });*/
   }
 </script>
-<script defer async src="/js/googleapi.js"></script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= key %>&callback=initMap"></script>
+<script
+  async
+  defer
+  src="https://maps.googleapis.com/maps/api/js?key=<%= key %>&callback=initMap"
+></script>
