--- a/views/users/complain-form.ejs
+++ b/views/users/complain-form.ejs
@@ -13,10 +13,10 @@
         <div class="d-flex justify-content-between align-items-center mb-2">
           <div><label>Map:</label></div>
           <ul class="list-group list-group-horizontal">
-              <li class="pill pill-info list-group-item text-center">longitude:
+              <li class="pill pill-info list-group-item text-center">latitude:
                   <div id="latclicked" name="latclicked">0</div>
               </li>
-              <li class="pill pill-info list-group-item text-center">latitude:
+              <li class="pill pill-info list-group-item text-center">longitude:
                   <div id="longclicked" name="longclicked">0</div>
               </li>
               <li class="pill pill-info list-group-item text-center">latmoved:
@@ -44,11 +44,9 @@
           <img src="https://mdbootstrap.com/img/Photos/Others/placeholder.jpg" style="height:20vh;">
           <% } %>
         </div>
-        <div class="d-flex justify-content-center">
-          <div class="btn btn-mdb-color btn-rounded float-left">
-            <div class="btn btn-info" id="trigger">Upload a Photo</div>
-            <input type="file" name="myImage" id="real-file" hidden>
-          </div>
+        <div class="d-flex justify-content-start">
+          <div class="btn btn-info mb-3" id="trigger">Upload a Photo</div>
+          <input type="file" name="myImage" id="real-file" hidden>
         </div>
       </div>
 
