--- a/views/users/history.ejs
+++ b/views/users/history.ejs
@@ -1,5 +1,11 @@
 <div class="d-flex justify-content-between align-items-center">
     <h1 class="display-5">My Complaints</h1>
+    <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+            <i class="fas fa-search"></i>
+        </button>
+    </form>
     <ul class="list-group list-group-horizontal">
         <li class="pill pill-info list-group-item">
             <a href="#" onclick="showTab('tab1')">all</a>
