--- a/views/partials/d-navbar.ejs
+++ b/views/partials/d-navbar.ejs
@@ -1,4 +1,4 @@
-<% if(typeof admin != 'undefined') { %>
+<% if(admin) { %>
 <nav class="navbar navbar-dark bg-dark sticky-top">
   <h3 class="navbar-brand">Dashboard</h3>
   <div class="d-flex justify-content-center align-items-center">
