--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,29 +1,49 @@
-<%- include("../partials/messages.ejs") %>
+<% if (typeof users !== 'undefined') { %> <%-
+include('../partials/getAllUsers',{users:users}); %> <% } %> <% if (typeof
+complains !== 'undefined') { %> <%-
+include('../partials/getAllComplains',{complains}); %> <% } %> <% if (typeof
+post !== 'undefined') { %>
+<section>
+  <form
+    action="/admin/dashboard/complaints/delete/<%= post.cid %>"
+    method="POST"
+  >
+    <input type="submit" class="btn btn-danger mb-3" value="DELETE" />
+  </form>
 
-<% if (typeof users !== 'undefined') { %>
-  <%- include('../partials/getAllUsers',{users:users}); %>
-<% } %>
-
-<% if (typeof complains !== 'undefined') { %>
-  <%- include('../partials/getAllComplains',{complains}); %>
-<% } %>
-
-<% if (typeof post !== 'undefined') { %>
-  <section>
-    <form action="/admin/dashboard/complaints/delete/<%= post.cid %>" method="POST"> 
-      <input type="submit" class="btn btn-danger mb-3" value="DELETE"/>
-    </form>
-    
-    <div class="card card-body d-flex justify-content-center align-items-center">
-      <div class="w-50">
-        <img src="<%= url %>" class="w-100"/>  
-      </div>
-      <div class="w-50">
-        <h3><%= post.title %></h3>
-        <p><%= post.description %></p>  
-      </div>
+  <div class="card card-body d-flex justify-content-center align-items-center">
+    <div id="map" style="height: 50vh;"></div>
+    <div class="w-50">
+      <img src="<%= url %>" class="w-100" />
     </div>
-  </section>
-<% } %>
+    <div class="w-50">
+      <h3><%= post.title %></h3>
+      <p><%= post.description %></p>
+    </div>
+  </div>
+</section>
+<!-- <script defer>
+  function initMap() {
+    var map;
+    var latitude = ;
+    var longitude = 
 
-hello from admin dashboard...
+    var myLatLng = { lat: latitude, lng: longitude };
+
+    map = new google.maps.Map(document.getElementById("map"), {
+      center: myLatLng,
+      zoom: 18,
+      disableDoubleClickZoom: true
+    });
+
+    var marker = new google.maps.Marker({
+      position: myLatLng,
+      map: map,
+      title: latitude + ", " + longitude
+    });
+  }
+  </script>
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=<%= googleMap %>&callback=initMap">
+  </script> -->
+<% } %>
