--- a/views/partials/googlemapapi.ejs
+++ b/views/partials/googlemapapi.ejs
@@ -2,24 +2,22 @@
 <script defer>
   function initMap() {
     var map;
-    var latitude = 27.7172453; // YOUR LATITUDE VALUE
-    var longitude = 85.3239605; // YOUR LONGITUDE VALUE
+    var latitude = 27.7172453;
+    var longitude = 85.3239605;
 
     var myLatLng = { lat: latitude, lng: longitude };
 
     map = new google.maps.Map(document.getElementById("map"), {
       center: myLatLng,
       zoom: 14,
-      disableDoubleClickZoom: true // disable the default map zoom on double click
+      disableDoubleClickZoom: true
     });
 
-    // Update lat/long value of div when anywhere in the map is clicked
     google.maps.event.addListener(map, "click", function(event) {
       document.getElementById("latclicked").innerHTML = event.latLng.lat();
       document.getElementById("longclicked").innerHTML = event.latLng.lng();
     });
 
-    // Update lat/long value of div when you move the mouse over the map
     google.maps.event.addListener(map, "mousemove", function(event) {
       document.getElementById("latmoved").innerHTML = event.latLng.lat();
       document.getElementById("longmoved").innerHTML = event.latLng.lng();
@@ -37,10 +35,10 @@
     markerArr.push(marker);
 
     // Update lat/long value of div when the marker is clicked
-    marker.addListener("click", function(event) {
-      document.getElementById("latclicked").innerHTML = event.latLng.lat();
-      document.getElementById("longclicked").innerHTML = event.latLng.lng();
-    });
+    // marker.addListener("click", function(event) {
+    //   document.getElementById("latclicked").innerHTML = event.latLng.lat();
+    //   document.getElementById("longclicked").innerHTML = event.latLng.lng();
+    // });
 
     // Create new marker on double click event on the map
     google.maps.event.addListener(map, "dblclick", function(event) {
@@ -58,15 +56,6 @@
       });
       markerArr.push(marker);
     });
-
-    // Create new marker on single click event on the map
-    /*google.maps.event.addListener(map,'click',function(event) {
-            var marker = new google.maps.Marker({
-              position: event.latLng,
-              map: map,
-              title: event.latLng.lat()+', '+event.latLng.lng()
-            });
-        });*/
   }
 </script>
 <script
