--- a/views/users/history.ejs
+++ b/views/users/history.ejs
@@ -1,7 +1,14 @@
 <div class="d-flex justify-content-between align-items-center">
     <h1 class="display-5">My Complaints</h1>
-    <form class="form-inline">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
+    <form class="form-inline" action="/user/history?search=search" method="GET">
+        <input 
+        class="form-control mr-sm-2" 
+        type="search" 
+        placeholder="Search" 
+        aria-label="Search" 
+        name="search"
+        value="<% typeof search != "undefined" ? search : '' %>"
+        />
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
             <i class="fas fa-search"></i>
         </button>
@@ -18,6 +25,9 @@
         </li>
     </ul>
 </div>
+<% if(length) { %>
+    <div class="badge badge-info"><%= length %> complains found.</div>
+<% } %>
 <% if(typeof complains[0] != 'undefined') { %>
 
     <div class="tab tab1">
