--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,87 +1,111 @@
 <div class="row">
-    <div class="col-md-8 m-auto text-center">
-        <img src="/images/slogo-2.png" style="height=20px;width:35px;">
-        <h1>Sar<span class="text-success">ok</span>aar</h1>
-        <p class="lead">We do listen to your concerns.</p>
-    </div>
+  <div class="col-md-8 m-auto text-center">
+    <img src="/images/slogo-2.png" style="height:auto;width:35px;" />
+    <h1>Sar<span class="text-success">ok</span>aar</h1>
+    <p class="lead">We do listen to your concerns.</p>
+  </div>
 </div>
 
 <%- include('../partials/messages.ejs') %>
 
 <div class="row mb-4">
-    <div class="col-md-8 m-auto text-center">
-        <div class="card card-body">
-            <small class="text-dark mb-2">Sign up with</small>
-            <div>
-                <a href="#" class="btn btn-light">
-                    <i class="fab fa-google"></i>
-                    Google
-                </a>
-                <a href="#" class="btn btn-light">
-                    <i class="fab fa-facebook"></i>
-                    Facebook
-                </a>
-            </div>
-            <hr>
-            <small class="text-dark mb-2">or sign up with credentials</small>
-            <form action="/user/register" method="POST">
-                <div class="form-group bx">
-                    <i class="fas fa-user-circle"></i>
-                    <input type="text" 
-                    name="uname" 
-                    placeholder="username" 
-                    value="<%= typeof uname != 'undefined' ? uname : '' %>"
-                    class="transparent"> 
-                </div>
-                <div class="form-group bx">
-                    <i class="far fa-envelope"></i>
-                    <input type="text" 
-                    name="email" 
-                    placeholder="email" 
-                    value="<%= typeof email != 'undefined' ? email : '' %>"
-                    class="transparent">
-                </div>
-                <div class="form-group bx">
-                    <i class="fas fa-mobile-alt"></i>
-                    <input type="text" 
-                    name="mobile" 
-                    placeholder="mobile" 
-                    value="<%= typeof mobile != 'undefined' ? mobile : '' %>"
-                    class="transparent">
-                </div>
-
-                <div class="form-group bx text-dark d-flex justify-content-start">
-
-                    <div class="custom-control custom-radio custom-control-inline">
-                    <input type="radio" class="custom-control-input" id="defaultInline1" name="gender" value="male">
-                    <label class="custom-control-label" for="defaultInline1">Male</label>
-                    </div>
-
-                    <div class="custom-control custom-radio custom-control-inline">
-                    <input type="radio" class="custom-control-input" id="defaultInline2" name="gender" value="female">
-                    <label class="custom-control-label" for="defaultInline2">Female</label>
-                    </div>
-                    
-                </div>
-
-                <div class="form-group bx">
-                    <i class="fas fa-key"></i>
-                    <input type="password" 
-                    name="password" 
-                    placeholder="password" 
-                    value="<%= typeof password != 'undefined' ? password : '' %>"
-                    class="transparent">
-                </div>
-                <div class="form-group bx">
-                    <i class="fas fa-key"></i>
-                    <input type="password" 
-                    name="cpassword" 
-                    placeholder="confirm-password"
-                    value="<%= typeof cpassword != 'undefined' ? password : '' %>" 
-                    class="transparent">
-                </div>
-                <input type="submit" value="register" class="btn btn-primary">
-            </form>
+  <div class="col-md-8 m-auto text-center">
+    <div class="card card-body">
+      <small class="text-dark mb-2">Sign up with</small>
+      <div>
+        <a href="/user/login/google" class="btn btn-light">
+          <i class="fab fa-google"></i>
+          Google
+        </a>
+        <a href="#" class="btn btn-light">
+          <i class="fab fa-facebook"></i>
+          Facebook
+        </a>
+      </div>
+      <hr />
+      <small class="text-dark mb-2">or sign up with credentials</small>
+      <form action="/user/register" method="POST">
+        <div class="form-group bx">
+          <i class="fas fa-user-circle"></i>
+          <input
+            type="text"
+            name="uname"
+            placeholder="username"
+            value="<%= typeof uname != 'undefined' ? uname : '' %>"
+            class="transparent"
+          />
         </div>
+        <div class="form-group bx">
+          <i class="far fa-envelope"></i>
+          <input
+            type="text"
+            name="email"
+            placeholder="email"
+            value="<%= typeof email != 'undefined' ? email : '' %>"
+            class="transparent"
+          />
+        </div>
+        <div class="form-group bx">
+          <i class="fas fa-mobile-alt"></i>
+          <input
+            type="text"
+            name="mobile"
+            placeholder="mobile"
+            value="<%= typeof mobile != 'undefined' ? mobile : '' %>"
+            class="transparent"
+          />
+        </div>
+
+        <div class="form-group bx text-dark d-flex justify-content-start">
+          <div class="custom-control custom-radio custom-control-inline">
+            <input
+              type="radio"
+              class="custom-control-input"
+              id="defaultInline1"
+              name="gender"
+              value="male"
+            />
+            <label class="custom-control-label" for="defaultInline1"
+              >Male</label
+            >
+          </div>
+
+          <div class="custom-control custom-radio custom-control-inline">
+            <input
+              type="radio"
+              class="custom-control-input"
+              id="defaultInline2"
+              name="gender"
+              value="female"
+            />
+            <label class="custom-control-label" for="defaultInline2"
+              >Female</label
+            >
+          </div>
+        </div>
+
+        <div class="form-group bx">
+          <i class="fas fa-key"></i>
+          <input
+            type="password"
+            name="password"
+            placeholder="password"
+            value="<%= typeof password != 'undefined' ? password : '' %>"
+            class="transparent"
+          />
+        </div>
+        <div class="form-group bx">
+          <i class="fas fa-key"></i>
+          <input
+            type="password"
+            name="cpassword"
+            placeholder="confirm-password"
+            value="<%= typeof cpassword != 'undefined' ? password : '' %>"
+            class="transparent"
+          />
+        </div>
+        <input type="submit" value="register" class="btn btn-primary" />
+      </form>
     </div>
+  </div>
 </div>
