--- a/views/partials/getAllComplains.ejs
+++ b/views/partials/getAllComplains.ejs
@@ -1,5 +1,9 @@
 <nav class="navbar navbar-light bg-light float-right">
-  <form class="form-inline" action="/admin/dashboard/complaints" method="POST">
+  <form
+    class="form-inline"
+    action="/admin/dashboard/complaints?search=search"
+    method="GET"
+  >
     <input
       class="form-control mr-sm-2"
       type="search"
