--- a/views/users/complain-form.ejs
+++ b/views/users/complain-form.ejs
@@ -29,8 +29,8 @@
               </li>
           <ul>
         </div>
+        <%- include("../partials/googlemapapi.ejs",{key: googeMapAPI}) %>
         
-    <%- include("../partials/googlemapapi.ejs",{key: mapKey}) %>
     </div>
     <div class="form-group">
         <label>Please briefly describe the problem:</label>
