--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -1,41 +1,41 @@
-<% if(typeof errors != 'undefined') { %>
-    <% errors.forEach(error => { %>
-        <div class="row">
-            <div class="col-md-8 m-auto text-center">
-                <div class="alert alert-danger"><%= error.msg %></div>
-            </div>
-        </div>
-    <% }); %>
-<% } %>
-
-<% if(success_msg != '') { %>
-  <div class="row">
-    <div class="col-md-8 m-auto text-center">
-      <div class="alert alert-success"><%= success_msg  %></div>
+<% if(typeof errors != 'undefined') { %> <% errors.forEach(error => { %>
+<div class="row">
+  <div class="col-md-8 m-auto text-center">
+    <div class="alert alert-danger"><%= error.msg %></div>
+  </div>
+</div>
+<% }); %> <% } %> <% if(success_msg != '') { %>
+<div class="row">
+  <div class="col-md-8 m-auto text-center">
+    <div class="alert alert-success"><%= success_msg %></div>
+  </div>
+</div>
+<% } %> <% if(error_msg != '') { %>
+<div class="row">
+  <div class="col-md-8 m-auto text-center">
+    <div class="alert alert-warning"><%= error_msg %></div>
+  </div>
+</div>
+<% } %> <% if(error != '') { %>
+<div class="row">
+  <div class="col-md-8 m-auto text-center">
+    <div class="alert alert-danger"><%= error %></div>
+  </div>
+</div>
+<% } %> <% if(link != '') { %>
+<div class="row">
+  <div class="col-md-8 m-auto text-center">
+    <div class="alert alert-success">
+      We've send a link to<span class="font-weight-bolder"> <%= link %></span>,
+      click
+      <a
+        class="text-info font-italic"
+        target="_blank"
+        href="https://<%= link %>"
+        >here</a
+      >
+      to verify
     </div>
   </div>
-<% } %>
-
-<% if(error_msg != '') { %>
-  <div class="row">
-    <div class="col-md-8 m-auto text-center">
-      <div class="alert alert-warning"><%= error_msg  %></div>
-    </div>
-  </div>
-<% } %>
-
-<% if(error != '') { %>
-  <div class="row">
-    <div class="col-md-8 m-auto text-center">
-      <div class="alert alert-danger"><%= error %></div>
-    </div>
-  </div>
-<% } %>
-
-<% if(link != '') { %>
-  <div class="row">
-    <div class="col-md-8 m-auto text-center">
-      <div class="alert alert-success">We've send a link to<span class="font-weight-bolder"> <%= link %></span>, click <a class="text-info font-italic" target="_blank" href="https://<%= link %>">here</a> to verify</div>
-    </div>
-  </div>
+</div>
 <% } %>
