--- a/views/users/create-new-password.ejs
+++ b/views/users/create-new-password.ejs
@@ -1,35 +1,39 @@
 <div class="row">
-    <div class="col-md-8 m-auto text-center">
-        <img src="/images/slogo-2.png" style="height=20px;width:35px;">
-        <h1>Sar<span class="text-success">ok</span>aar</h1>
-        <p class="lead">We do listen to your concerns.</p>
-    </div>
+  <div class="col-md-8 m-auto text-center">
+    <img src="/images/slogo-2.png" style="height:20px;width:35px;" />
+    <h1>Sar<span class="text-success">ok</span>aar</h1>
+    <p class="lead">We do listen to your concerns.</p>
+  </div>
 </div>
 
 <%- include('../partials/messages.ejs') %>
 
 <div class="row mb-5">
-    <div class="col-md-8 m-auto text-center">
-        <div class="card card-body">
-            <form action="/user/password-verify" method="POST">
-                <div class="form-group bx">
-                    <i class="fas fa-user-circle"></i>
-                    <input type="password" 
-                    name="password" 
-                    placeholder="enter new password" 
-                    class="transparent"> 
-                </div>
-                <div class="form-group bx">
-                    <i class="fas fa-user-circle"></i>
-                    <input type="password" 
-                    name="cpassword" 
-                    placeholder="confirm password" 
-                    class="transparent"> 
-                </div>
-                <input type="submit" value="change password" class="btn btn-primary">
-                <input type="hidden" name="token" value="<%= token %>">
-                <input type="hidden" name="userId" value="<%= userId %>">
-            </form>
+  <div class="col-md-8 m-auto text-center">
+    <div class="card card-body">
+      <form action="/user/password-verify" method="POST">
+        <div class="form-group bx">
+          <i class="fas fa-user-circle"></i>
+          <input
+            type="password"
+            name="password"
+            placeholder="enter new password"
+            class="transparent"
+          />
         </div>
+        <div class="form-group bx">
+          <i class="fas fa-user-circle"></i>
+          <input
+            type="password"
+            name="cpassword"
+            placeholder="confirm password"
+            class="transparent"
+          />
+        </div>
+        <input type="submit" value="change password" class="btn btn-primary" />
+        <input type="hidden" name="token" value="<%= token %>" />
+        <input type="hidden" name="userId" value="<%= userId %>" />
+      </form>
     </div>
+  </div>
 </div>
