--- a/views/users/forgot-password.ejs
+++ b/views/users/forgot-password.ejs
@@ -1,30 +1,32 @@
 <div class="row">
-    <div class="col-md-8 m-auto text-center">
-        <img src="/images/slogo-2.png" style="height=20px;width:35px;">
-        <h1>Sar<span class="text-success">ok</span>aar</h1>
-        <p class="lead">We do listen to your concerns.</p>
-    </div>
+  <div class="col-md-8 m-auto text-center">
+    <img src="/images/slogo-2.png" style="height:20px;width:35px;" />
+    <h1>Sar<span class="text-success">ok</span>aar</h1>
+    <p class="lead">We do listen to your concerns.</p>
+  </div>
 </div>
 
 <%- include('../partials/messages.ejs') %>
 
 <div class="row mb-5">
-    <div class="col-md-8 m-auto text-center">
-        <div class="card card-body">
-            <form action="/user/handle-forgot-password" method="GET">
-                <div class="form-group bx">
-                    <i class="fas fa-user-circle"></i>
-                    <input type="text" 
-                    name="email" 
-                    placeholder="email" 
-                    value="<%= typeof email != 'undefined' ? email : '' %>"
-                    class="transparent"> 
-                </div>
-                <input type="submit" value="reset password" class="btn btn-primary">
-            </form>
-            <div class="text-left">
-                <a href="/user/login" class="text-info">Go back</a>
-            </div>
+  <div class="col-md-8 m-auto text-center">
+    <div class="card card-body">
+      <form action="/user/handle-forgot-password?email=email" method="GET">
+        <div class="form-group bx">
+          <i class="fas fa-user-circle"></i>
+          <input
+            type="text"
+            name="email"
+            placeholder="email"
+            value="<%= typeof email != 'undefined' ? email : '' %>"
+            class="transparent"
+          />
         </div>
+        <input type="submit" value="reset password" class="btn btn-primary" />
+      </form>
+      <div class="text-left">
+        <a href="/user/login" class="text-info">Go back</a>
+      </div>
     </div>
+  </div>
 </div>
