--- a/views/admin/invite.ejs
+++ b/views/admin/invite.ejs
@@ -1,11 +1,26 @@
-<div class="card card-body">
-  <form action="/admin/dashboard/invite" method="POST" class="w-50 text-center m-auto">
-    <div class="form-group">
-      <input type="email" name="email" class="form-control" placeholder="email" required>
-    </div>
-    <div class="form-group">
-      <textarea name="description" cols="30" rows="10" class="w-100"></textarea>
-    </div>
-    <input type="submit" value="invite" class="btn btn-info">
-  </form>
-</div>
+<form
+  action="/admin/dashboard/invite"
+  method="POST"
+  class="w-50 text-center m-auto"
+>
+  <div class="form-group">
+    <input
+      type="email"
+      name="email"
+      class="form-control"
+      placeholder="email"
+      required
+      style="background: transparent"
+    />
+  </div>
+  <div class="form-group">
+    <textarea
+      name="description"
+      cols="30"
+      rows="10"
+      class="w-100"
+      style="background: transparent"
+    ></textarea>
+  </div>
+  <input type="submit" value="invite" class="btn btn-info" />
+</form>
