--- a/views/layouts/dashboard.ejs
+++ b/views/layouts/dashboard.ejs
@@ -30,7 +30,13 @@
           </div>
           <%# main %>
           <div class="container" style="margin-top:-100px">
-            <div class="card card-body"><%- body %></div>
+            <div
+              class="card card-body"
+              style="min-height: 78vh;position: relative;background: transparent;box-shadow: 0 0 10px 10px rgba(0, green, 0, 0.9) inset !important"
+            >
+              <%- body %>
+              <div class="sarokaar-bg"></div>
+            </div>
           </div>
         </div>
       </div>
