--- a/views/partials/work.ejs
+++ b/views/partials/work.ejs
@@ -1,27 +1,36 @@
 <section id="about" class="grid" style="min-height:70vh;margin:100px 0">
-
   <div class="grid-item">
     <h2 class="title">You Complain!</h2>
-    <div><img src="/images/workone.png" style="height:300px;width:300px;"></div> 
+    <div>
+      <img src="/images/assets/workone.png" style="height:300px;width:300px;" />
+    </div>
     <p>
-		Users can complain about anything they find it suitable to the concerned municipality.
+      Users can complain about anything they find it suitable to the concerned
+      municipality.
     </p>
   </div>
 
   <div class="grid-item">
     <h2 class="title">We recieve!</h2>
-    <div><img src="/images/worktwo.jpg" style="height:300px;width:300px;"></div> 
+    <div>
+      <img src="/images/assets/worktwo.jpg" style="height:300px;width:300px;" />
+    </div>
     <p>
-		Authorities recieve the complaints and required resouces are allocated accordingly.
+      Authorities recieve the complaints and required resouces are allocated
+      accordingly.
     </p>
   </div>
 
   <div class="grid-item">
     <h2 class="title">We respond!</h2>
-    <div><img src="/images/workthree.jpg" style="height:300px;width:300px;"></div>
+    <div>
+      <img
+        src="/images/assets/workthree.jpg"
+        style="height:300px;width:300px;"
+      />
+    </div>
     <p>
-		The complaint is resolved and user is notified of that.
+      The complaint is resolved and user is notified of that.
     </p>
   </div>
-
 </section>
