--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -12,7 +12,7 @@
 .sarokaar-bg {
   opacity: 0.2;
   z-index: -999;
-  background-image: url("/images/slogo-2.png");
+  background-image: url("/images/assets/slogo-2.png");
   background-repeat: no-repeat;
   background-position: center;
   /* background-size: cover; */
@@ -22,4 +22,12 @@
   top: 0;
   left: 0;
   /* transform: translate(50%, 50%); */
+}
+
+.restrict {
+  background: transparent !important;
+  border: none;
+}
+.restrict:hover {
+  background: rgba(0, 0, 0, 0.4);
 }
