--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -56,7 +56,7 @@ body {
 }
 
 .banner {
-  background-image: url("../images/first.png");
+  background-image: url("../images/assets/first.png");
 
   width: 100%;
   min-height: 80vh;
