--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title><%= title %></title>
-    <link rel="shortcut icon" href="/images/slogo-2.png" type="image/x-icon">
-    <link rel="stylesheet" href="/fonts/css/all.min.css">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/footer.css">
-    <link rel="stylesheet" href="/css/aboutus.css">
-    <link rel="stylesheet" href="/css/work.css">
-
-</head>
-<body>
-    <%- include('../partials/header.ejs')%>
-    <%- body %>
-    <%- include('../partials/footer.ejs')%>
-</body>
+    <link rel="stylesheet" href="/fonts/css/all.min.css" />
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="/css/footer.css" />
+    <link rel="stylesheet" href="/css/aboutus.css" />
+    <link rel="stylesheet" href="/css/work.css" />
+  </head>
+  <body>
+    <%- include('../partials/header.ejs')%> <%- body %> <%-
+    include('../partials/footer.ejs')%>
+  </body>
 </html>
