--- a/views/users/history.ejs
+++ b/views/users/history.ejs
@@ -1,133 +1,79 @@
 <div class="d-flex justify-content-between align-items-center">
-    <h1 class="display-5">My Complaints</h1>
-    <form class="form-inline" action="/user/history?search=search" method="GET">
-        <input 
-        class="form-control mr-sm-2" 
-        type="search" 
-        placeholder="Search" 
-        aria-label="Search" 
-        name="search"
-        value="<% typeof search != "undefined" ? search : '' %>"
-        />
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-            <i class="fas fa-search"></i>
-        </button>
-    </form>
-    <ul class="list-group list-group-horizontal">
-        <li class="pill pill-info list-group-item">
-            <a href="#" onclick="showTab('tab1')">all</a>
-        </li>
-        <li class="pill pill-info list-group-item">
-            <a href="#" onclick="showTab('tab2')">completed</a>
-        </li>
-        <li class="pill pill-info list-group-item">
-            <a href="#" onclick="showTab('tab3')">pending</a>
-        </li>
-    </ul>
+  <h1 class="display-5">My Complaints</h1>
+  <form class="form-inline" action="/user/history?search=search" method="GET">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search"
+    aria-label="Search" name="search" value="<% typeof search != "undefined" ?
+    search : '' %>" />
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+      <i class="fas fa-search"></i>
+    </button>
+  </form>
+  <ul class="list-group list-group-horizontal">
+    <li class="pill pill-info list-group-item">
+      <form action="/user/history?restrict=completed" method="GET">
+        <input type="submit" readonly name="restrict" value="completed" />
+      </form>
+    </li>
+    <li class="pill pill-info list-group-item">
+      <form action="/user/history?restrict=pending" method="GET">
+        <input type="submit" readonly name="restrict" value="pending" />
+      </form>
+    </li>
+  </ul>
 </div>
 <% if(length) { %>
-    <div class="badge badge-info"><%= length %> complains found.</div>
-<% } %>
-<% if(typeof complains[0] != 'undefined') { %>
+<div class="badge badge-info"><%= length %> complains found.</div>
+<% } %> <% if(typeof complains[0] != 'undefined') { %>
 
-    <div class="tab tab1">
-        <% complains.forEach(complain=>{ %>
-            <div class="card card-body mb-5 d-flex justify-content-start align-items-start flex-row" style="border-left:4px solid #28a745; cursor:pointer;position:relative">
-                <div class="mr-4 hide"><img src="<%= complain.image %>" style="height:200px;width:200px"></div>
-                <div class="container-fluid">
-                    <div class="mb-3" style="border-bottom:3px solid #28a745;width:100%"><h5><%= complain.title %></h5></div>
-                    <div class="">Status: <% if(complain.isCompleted) { %>
-                        <small class="badge badge-success">Completed</small>
-                    <% }else { %>
-                        <small class="badge badge-danger">Pending</small>
-                    <% } %>
-                    </div>
-                    <div class="mb-3 word-wrap">description: <%= complain.description %></div>
-                    <button class="view-modal btn btn-info">view</button>
-                    <div class="ml-4 text-right" style="color:#b0bac3; position:absolute;right:5px;bottom:5px"><sub><%= complain.dateCreated %></sub></div>
-                </div>
-            </div> 
-
-            <section class="history-modal">
-                <div class="container-fluid d-flex justify-content-center" style="height:100%;">
-                    <div class="history-modal-card">
-                        <i class="fas fa-times cross"></i>
-                        <div>
-                            <img src="<%= complain.image %>" style="height:auto;width:100%"/>
-                        </div>
-                        <div class="jumboss"><%= complain.description %></div>
-                    </div>
-                </div>
-            </section>
-        <% }) %>
+<div class="tab tab1">
+  <% complains.forEach(complain=>{ %>
+  <div
+    class="card card-body mb-5 d-flex justify-content-start align-items-start flex-row"
+    style="border-left:4px solid #28a745; cursor:pointer;position:relative"
+  >
+    <div class="mr-4 hide">
+      <img src="<%= complain.image %>" style="height:200px;width:200px" />
     </div>
-
-    <div class="tab tab2" style="display:none;">
-        <% var filteredComplains = complains.filter(complain => complain.isCompleted) %>
-        <% filteredComplains.forEach(complain => { %>
-            <div class="card card-body mb-5 d-flex justify-content-start align-items-start flex-row" style="border-left:4px solid #28a745; cursor:pointer;position:relative">
-                <div class="mr-4 hide"><img src="<%= complain.image %>" style="height:200px;width:200px"></div>
-                <div class="container-fluid">
-                    <div class="mb-3" style="border-bottom:3px solid #28a745;width:100%"><h5><%= complain.title %></h5></div>
-                    <div class="">Status: <% if(complain.isCompleted) { %>
-                        <small class="badge badge-success">Completed</small>
-                    <% }else { %>
-                        <small class="badge badge-danger">Pending</small>
-                    <% } %>
-                    </div>
-                    <div class="mb-3 word-wrap">description: <%= complain.description %></div>
-                    <button class="view-modal btn btn-info">view</button>
-                    <div class="ml-4 text-right" style="color:#b0bac3; position:absolute;right:5px;bottom:5px"><sub><%= complain.dateCreated %></sub></div>
-                </div>
-            </div> 
-
-            <section class="history-modal">
-                <div class="container-fluid d-flex justify-content-center" style="height:100%;">
-                    <div class="history-modal-card">
-                        <i class="fas fa-times cross"></i>
-                        <div>
-                            <img src="<%= complain.image %>" style="height:auto;width:100%"/>
-                        </div>
-                        <div class="jumboss"><%= complain.description %></div>
-                    </div>
-                </div>
-            </section>
-        <% }) %>
+    <div class="container-fluid">
+      <div class="mb-3" style="border-bottom:3px solid #28a745;width:100%">
+        <h5><%= complain.title %></h5>
+      </div>
+      <div class="">
+        Status: <% if(complain.isCompleted) { %>
+        <small class="badge badge-success">Completed</small>
+        <% }else { %>
+        <small class="badge badge-danger">Pending</small>
+        <% } %> <% if(Date.now() > complain.expDate) { %>
+        <small class="badge badge-primary">new</small>
+        <% } %>
+      </div>
+      <div class="mb-3 word-wrap">description: <%= complain.description %></div>
+      <button class="view-modal btn btn-info">view</button>
+      <div
+        class="ml-4 text-right"
+        style="color:#b0bac3; position:absolute;right:5px;bottom:5px"
+      >
+        <sub><%= complain.dateCreated %></sub>
+      </div>
     </div>
+  </div>
 
-    <div class="tab tab3" style="display:none;">
-        <% var filteredComplains = complains.filter(complain => !complain.isCompleted) %>
-        <% filteredComplains.forEach(complain => { %>
-            <div class="card card-body mb-5 d-flex justify-content-start align-items-start flex-row" style="border-left:4px solid #28a745; cursor:pointer;position:relative">
-                <div class="mr-4 hide"><img src="<%= complain.image %>" style="height:200px;width:200px"></div>
-                <div class="container-fluid">
-                    <div class="mb-3" style="border-bottom:3px solid #28a745;width:100%"><h5><%= complain.title %></h5></div>
-                    <div class="">Status: <% if(complain.isCompleted) { %>
-                        <small class="badge badge-success">Completed</small>
-                    <% }else { %>
-                        <small class="badge badge-danger">Pending</small>
-                    <% } %>
-                    </div>
-                    <div class="mb-3 word-wrap">description: <%= complain.description %></div>
-                    <button class="view-modal btn btn-info">view</button>
-                    <div class="ml-4 text-right" style="color:#b0bac3; position:absolute;right:5px;bottom:5px"><sub><%= complain.dateCreated %></sub></div>
-                </div>
-            </div> 
-
-            <section class="history-modal">
-                <div class="container-fluid d-flex justify-content-center" style="height:100%;">
-                    <div class="history-modal-card">
-                        <i class="fas fa-times cross"></i>
-                        <div>
-                            <img src="<%= complain.image %>" style="height:auto;width:100%"/>
-                        </div>
-                        <div class="jumboss"><%= complain.description %></div>
-                    </div>
-                </div>
-            </section>
-        <% }) %>
+  <section class="history-modal">
+    <div
+      class="container-fluid d-flex justify-content-center"
+      style="height:100%;"
+    >
+      <div class="history-modal-card">
+        <i class="fas fa-times cross"></i>
+        <div>
+          <img src="<%= complain.image %>" style="height:auto;width:100%" />
+        </div>
+        <div class="jumboss"><%= complain.description %></div>
+      </div>
     </div>
+  </section>
+  <% }) %>
+</div>
 <% }else { %>
-    <p class="lead text-muted">There are no complaints...</p>
+<p class="lead text-muted">There are no complaints...</p>
 <% } %>
-
