--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-8 m-auto text-center">
-    <img src="/images/slogo-2.png" style="height:auto;width:35px;" />
+    <img src="/images/assets/slogo-2.png" style="height:auto;width:35px;" />
     <h1>Sar<span class="text-success">ok</span>aar</h1>
     <p class="lead">We do listen to your concerns.</p>
   </div>
